syntax = "proto3";

package postNotification;

service NotificationService {
    rpc TagNotification(TagNotificationRequest) returns (TagNotificationResponse) {};
}

message TagNotificationRequest {
  string userId = 1;
  string postId = 2;
  repeated string TagedUserIds = 4; 
}

message TagNotificationResponse {
    string message = 1;
    bool success = 2;
}

